# nanobindgen

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  gen.py  pyproject.toml  setup.py
.github/workflows/: github-deploy.yml  publish.yml
src/nanobindgen/: __init__.py  __main__.py
tests/: expected_output.h  input.h  test_bindings.py
