[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobindgen"
version = "0.0.1"
description = "A Python package with a custom tree-sitter grammar"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["tree-sitter==0.21.3", "tree-sitter-cpp==0.22.3"]

[project.urls]
"Homepage" = "https://github.com/pycad-dev/nanobindgen"

[tool.setuptools.package-data]
nanobindgen = ["*.so", "*.dylib"]
